# OpenSTC

./: .gitignore  CMakeLists.txt  README.md
depends/include/fmt/: core.h  format.h
depends/lib/debug/: fmtd.lib
depends/lib/release/: fmt.lib
input_files/boundary_condition/: boundary   0.txt  inner   0.txt  parallel   0.txt
input_files/chemistry/: combustion_mechanism.inp
input_files/grid/: grid   0.grd
input_files/setup/: 0_global_control.txt  1_grid_information.txt  2_scheme.txt  3_species_reactions.txt  4_laminar_turbulent.txt  5_boundary_condition.txt  6_post_process.txt  8_initialization.txt  9_transport_property.txt
src/: BoundCond.cpp  BoundCond.cu  BoundCond.cuh  BoundCond.h  CMakeLists.txt  ChemData.cpp  ChemData.h  Constants.h  DPLURHPP.cuh  DParameter.cu  DParameter.h  DataCommunication.cu  DataCommunication.cuh  Define.h  Driver.cu  Driver.cuh  Driver.h  Element.cpp  Element.h  Field.cu  Field.h  FieldOperation.cu  FieldOperation.cuh  FiniteRateChem.cu  FiniteRateChem.cuh  ImplicitTreatmentHPP.cuh  Initialize.cu  Initialize.cuh  Initialize.h  InviscidScheme.cu  InviscidScheme.cuh  Limiter.cuh  MPIIO.cu  MPIIO.hpp  Mesh.cpp  Mesh.h  Output.hpp  Parallel.cpp  Parallel.cu  Parallel.h  (+22 more)
src/gxl_lib/: Array.hpp  Math.hpp  Matrix.hpp  MyString.cpp  MyString.h  Time.cpp  Time.h
